--- a/config-repo/auth-service.yml
+++ b/config-repo/auth-service.yml
@@ -6,14 +6,6 @@ spring:
     name: auth-service
   config:
     import: optional:configserver:http://config-service:8888
-  cloud:
-    config:
-      uri: http://config-service:8888
-      fail-fast: false
-      retry:
-        max-attempts: 6
-        initial-interval: 1000
-        max-interval: 2000
   datasource:
     url: jdbc:postgresql://postgres:5432/authdb
     username: postgres
@@ -36,12 +28,13 @@ spring:
       mail.smtp.writetimeout: 10000
 
 app:
-  verification-url: "http://gateway-service:8080/auth/verify"
+  verification-url: http://gateway-service:8080/auth/verify
 
 jwt:
   secret: "UCIafMmHwgsJKIgg4xVAL/eOvR3ZXD/ZnYE9AfMaMQg="
   access-minutes: 30
   refresh-days: 7
+  issuer: http://auth-service:8081
 
 eureka:
   client:
@@ -53,3 +46,9 @@ eureka:
   instance:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${random.uuid}
+
+logging:
+  level:
+    com.auth.service: DEBUG
+    org.springframework.web: DEBUG
+    reactor.netty: DEBUG
