--- a/exam-service/src/main/resources/application.yml
+++ b/exam-service/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 server:
   port: ${EXAM_SERVICE_PORT:8086}
 
+# Fix for swagger-ui.html mapping conflict with /exams/{id}
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   application:
     name: exam-service
   config:
